# digiEduHack_hackathon

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yml  pyproject.toml  requirments.txt
data/synthetic_samples/: attendance_log.csv  behavior_log.csv  behavior_metrics.csv  club_attendance.csv  competition_results.csv  daily_attendance.csv  extracurricular_activities.csv  final_grades.csv  homework_statistics.csv  homework_tracking.csv  lesson_engagement.csv  modified_behavior_metrics.csv  modified_clubs_random.json  modified_grades_random.json  modified_student_ranking.csv  modified_teacher_performance.csv  reading_progress.csv  student_ranking.csv  subject_comparison.csv  teacher_performance.csv  teacher_schedule.csv
srcs/api/: app.py
srcs/dq/: agent.py  data_quality.py  db_manager.py  docker-compose.yaml  embedding.py  prompt.py  storage.py  summarize_mp3.py  wrapper.py
srcs/dq/handlers/audio_handlers/: abstract_audio_handler.py  generic_audio_handler.py  m4a_audio_handler.py  mp3_audio_handler.py  wav_audio_handler.py
srcs/dq/handlers/table_handlers/: abstract_table_handler.py  csv_table_handler.py  json_table_handler.py  xlsx_table_handler.py
srcs/dq/handlers/text_handlers/: abstract_text_handler.py  docx_text_handler.py  pdf_text_handler.py  txt_text_handler.py
srcs/frontend/my-app/: Dockerfile.frontend
srcs/frontend/my-app/src/routes/: AnalystPage.tsx
